Fixes for some line wrapping issues in code tags on certain cellphones

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,10 @@ html {
     min-height: 100%;
 }
 
-code {
-    word-wrap: break-word;
+pre, code {
+    word-wrap: break-word !important;
+    white-space: pre-wrap !important;
+    overflow-wrap: break-word !important;
 }
 
 footer {
